add bootstrap vezba 2

--- a/Web Site/index.html
+++ b/Web Site/index.html
@@ -10,10 +10,9 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!-- The above 3 meta tags *must* come first in the head; any other head content must come
-*after* these tags -->
+<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-<title>Bootstrap 101 Template</title>
+<title>Bootstrap</title>
 
 <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -27,72 +26,84 @@
 
 <div class="row">
 
-<div class="col-md-3">
+<div>
 
-<div class="col1">side left</div>
+<h1>H1 Heading</h1>
 
-</div>
+<h2>H2 Heading <small> Secondary text </small></h2>
 
-<div class="col-md-6">
+<h3 class="text-hide">H3 hide Heading</h3>
 
-<div class="col2">main col
+<h3>H3 Heading</h3>
 
-<div class="row">
+<p class="lead"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
 
-<div class="col-md-4">
+labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
 
-<div class="colinside">Inside col</div>
+nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
 
-</div>
+velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 
-<div class="col-md-4">
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
 
-<div class="colinside">Inside col</div>
+<p> <span class="lead"> Lorem ipsum dolor </span> sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
 
-</div>
+labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
 
-<div class="col-md-4">
+nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
 
-<div class="colinside">Inside col</div>
+velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 
-</div>
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
 
-</div>
+<p class="text-center"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
 
-</div>
+labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
 
-</div>
+nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
 
-<div class="col-md-3">
+velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 
-<div class="col3">side right</div>
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
 
-</div>
+H1 heading, Bootstrap користи 36 пиксели фонт BOLD
 
-</div>
-<div class="row">
+H2 heading, Bootstrap
+користи 30 пиксели фонт
+BOLD
 
-<div class="col-md-3">
+H3 heading, Bootstrap користи 24 пиксели фонт BOLD
 
-<div class="col4">col 4</div>
+<small> овозможува креирање на поднаслов(subheading)
 
-</div>
+“text-hide“ класата овозможува прикривање на текстот
 
-<div class="col-md-3">
+class=“lead”, овозможува да се презентира парагафот како
+главен во однос на текстот
 
-<div class="col5">col 5</div>
+тагот овозможува да се презентира текстот во <span>
+како главен во однос на останатиот
 
-</div>
+тагот овозможува да се постави текстот во центар
+<p class="text-nowrap"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
 
-<div class="col-md-3">
+labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
 
-<div class="col6">col 6</div>
+nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
 
-</div>
+velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 
-<div class="col-md-3">
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
 
-<div class="col7">col 7</div>
+<p class="small"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+
+labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+
+nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+
+velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
 
 </div>
 
