--- a/Web Site/index.html
+++ b/Web Site/index.html
@@ -1,32 +1,65 @@
 <!DOCTYPE html>
-<html>
+
+<html lang="en">
+
 <head>
-    <link rel="stylesheet" type="text/css" href="style.css">
+
+<meta charset="utf-8">
+
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags
+-->
+
+<title>Bootstrap 101 Template</title>
+
+<!-- Bootstrap -->
+
+<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+<link href="stylesheet.css" rel="stylesheet">
+
 </head>
+
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-4 col-md-4 col-lg-4">
-                <p class="text-primary">Прва колона</p>
-            </div>
-            <div class="col-sm-4 col-md-4 col-lg-4 main-column">
-                <p class="text-success">Основна колона</p>
-            </div>
-            <div class="col-sm-4 col-md-4 col-lg-4">
-                <p class="text-danger">Трета колона</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-4 col-md-4 col-lg-4 main-column">
-                <p class="text-warning">Прва колона</p>
-            </div>
-            <div class="col-sm-4 col-md-4 col-lg-4">
-                <p class="text-info">Основна колона</p>
-            </div>
-            <div class="col-sm-4 col-md-4 col-lg-4">
-                <p class="text-secondary">Трета колона</p>
-            </div>
-        </div>
-    </div>
+
+<input type="button" class="btn" value="Submit">
+
+<input type="button" class="btn btn-default" value="Submit">
+
+<input type="button" class="btn btn-primary" value="Submit">
+
+<input type="button" class="btn btn-secondary" value="Submit">
+
+<input type="button" class="btn btn-success" value="Submit">
+
+<input type="button" class="btn btn-info" value="Submit">
+
+<input type="button" class="btn btn-warning" value="Submit">
+
+<input type="button" class="btn btn-danger" value="Submit">
+
+<input type="button" class="btn btn-link" value="Submit">
+
+<input type="button" class="btn-lg btn-primary" value="Submit">
+
+<input type="button" class="btn-lg btn-primary btn-block" value="Submit">
+
+<input type="button" class="btn-lg btn-primary active" value="Submit">
+
+<input type="button" class="btn-lg btn-primary disabled" value="Submit">
+
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+
+<script src="jquery.min.js"></script>
+
+<!-- Include all compiled plugins (below), or include individual files as needed
+-->
+
+<script src="bootstrap/js/bootstrap.min.js"></script>
+
 </body>
+
 </html>
