--- a/Web Site/index.html
+++ b/Web Site/index.html
@@ -10,8 +10,8 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags
--->
+<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these
+tags -->
 
 <title>Bootstrap 101 Template</title>
 
@@ -51,12 +51,75 @@
 
 <input type="button" class="btn-lg btn-primary disabled" value="Submit">
 
+<input type="button" class="btn btn-primary disabled" value="Submit">
+
+<div class="btn-group" role="group">
+
+<button type="button" class="btn btn-primary">Button 1</button>
+
+<button type="button" class="btn btn-info">Button 2</button>
+
+<button type="button" class="btn btn-success">Button 3</button>
+
+</div>
+
+<div class="btn-group btn-group-lg" role="group">
+
+<button type="button" class="btn btn-primary">Button 1</button>
+
+<button type="button" class="btn btn-info">Button 2</button>
+
+<button type="button" class="btn btn-success">Button 3</button>
+
+</div>
+
+<div class="btn-group-vertical" role="group">
+
+<button type="button" class="btn btn-primary">Button 1</button>
+
+<button type="button" class="btn btn-info">Button 2</button>
+
+<button type="button" class="btn btn-success">Button 3</button>
+
+</div>
+
+<div class="btn-toolbar" role="toolbar" id="test1">
+
+<div class="btn-group" role="group">
+
+<button type="button" class="btn btn-primary">1</button>
+
+<button type="button" class="btn btn-primary">2</button>
+
+<button type="button" class="btn btn-primary">3</button>
+
+<button type="button" class="btn btn-primary">4</button>
+
+<button type="button" class="btn btn-primary">5</button>
+
+</div>
+
+<div class="btn-group" role="group">
+
+<button type="button" class="btn btn-primary">6</button>
+
+<button type="button" class="btn btn-primary">7</button>
+
+<button type="button" class="btn btn-primary">8</button>
+
+<button type="button" class="btn btn-primary">9</button>
+
+</div>
+
+</div>
+
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 
 <script src="jquery.min.js"></script>
 
-<!-- Include all compiled plugins (below), or include individual files as needed
--->
+<!-- Include all compiled plugins (below), or include individual files as
+
+needed -->
 
 <script src="bootstrap/js/bootstrap.min.js"></script>
 
