--- a/Web Site/index.html
+++ b/Web Site/index.html
@@ -25,91 +25,21 @@ tags -->
 
 <body>
 
-<input type="button" class="btn" value="Submit">
+<div class="dropdown">
 
-<input type="button" class="btn btn-default" value="Submit">
+<button type="button" class="btn btn-primary dropdown-toggle"
 
-<input type="button" class="btn btn-primary" value="Submit">
+data-toggle="dropdown">Choose a selection</button>
 
-<input type="button" class="btn btn-secondary" value="Submit">
+<ul class="dropdown-menu" role="menu">
 
-<input type="button" class="btn btn-success" value="Submit">
+<li><a href="#">Car</a></li>
 
-<input type="button" class="btn btn-info" value="Submit">
+<li><a href="#">Bus</a></li>
 
-<input type="button" class="btn btn-warning" value="Submit">
+<li><a href="#">Airplane</a></li>
 
-<input type="button" class="btn btn-danger" value="Submit">
-
-<input type="button" class="btn btn-link" value="Submit">
-
-<input type="button" class="btn-lg btn-primary" value="Submit">
-
-<input type="button" class="btn-lg btn-primary btn-block" value="Submit">
-
-<input type="button" class="btn-lg btn-primary active" value="Submit">
-
-<input type="button" class="btn-lg btn-primary disabled" value="Submit">
-
-<input type="button" class="btn btn-primary disabled" value="Submit">
-
-<div class="btn-group" role="group">
-
-<button type="button" class="btn btn-primary">Button 1</button>
-
-<button type="button" class="btn btn-info">Button 2</button>
-
-<button type="button" class="btn btn-success">Button 3</button>
-
-</div>
-
-<div class="btn-group btn-group-lg" role="group">
-
-<button type="button" class="btn btn-primary">Button 1</button>
-
-<button type="button" class="btn btn-info">Button 2</button>
-
-<button type="button" class="btn btn-success">Button 3</button>
-
-</div>
-
-<div class="btn-group-vertical" role="group">
-
-<button type="button" class="btn btn-primary">Button 1</button>
-
-<button type="button" class="btn btn-info">Button 2</button>
-
-<button type="button" class="btn btn-success">Button 3</button>
-
-</div>
-
-<div class="btn-toolbar" role="toolbar" id="test1">
-
-<div class="btn-group" role="group">
-
-<button type="button" class="btn btn-primary">1</button>
-
-<button type="button" class="btn btn-primary">2</button>
-
-<button type="button" class="btn btn-primary">3</button>
-
-<button type="button" class="btn btn-primary">4</button>
-
-<button type="button" class="btn btn-primary">5</button>
-
-</div>
-
-<div class="btn-group" role="group">
-
-<button type="button" class="btn btn-primary">6</button>
-
-<button type="button" class="btn btn-primary">7</button>
-
-<button type="button" class="btn btn-primary">8</button>
-
-<button type="button" class="btn btn-primary">9</button>
-
-</div>
+</ul>
 
 </div>
 
@@ -117,9 +47,7 @@ tags -->
 
 <script src="jquery.min.js"></script>
 
-<!-- Include all compiled plugins (below), or include individual files as
-
-needed -->
+<!-- Include all compiled plugins (below), or include individual files as needed -->
 
 <script src="bootstrap/js/bootstrap.min.js"></script>
 
