--- a/Web Site/index.html
+++ b/Web Site/index.html
@@ -10,8 +10,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these
-tags -->
+<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
 <title>Bootstrap 101 Template</title>
 
@@ -25,19 +24,29 @@ tags -->
 
 <body>
 
-<div class="dropdown">
+<div class="dropdown" id="test">
 
 <button type="button" class="btn btn-primary dropdown-toggle"
 
-data-toggle="dropdown">Choose a selection</button>
+data-toggle="dropdown">Choose a selection <span class="caret"></button>
 
 <ul class="dropdown-menu" role="menu">
+
+<li class="dropdown-header">Transportation</li>
 
 <li><a href="#">Car</a></li>
 
 <li><a href="#">Bus</a></li>
 
 <li><a href="#">Airplane</a></li>
+
+<li class="divider"></li>
+
+<li class="dropdown-header">Food</li>
+
+<li><a href="#">Hamburger</a></li>
+
+<li><a href="#">French Fries</a></li>
 
 </ul>
 
