--- a/Web Site/index.html
+++ b/Web Site/index.html
@@ -24,33 +24,25 @@
 
 <body>
 
-<div class="dropdown" id="test">
+<nav class="navbar navbar-inverse">
 
-<button type="button" class="btn btn-primary dropdown-toggle"
+<div class="container-fluid">
 
-data-toggle="dropdown">Choose a selection <span class="caret"></button>
+<ul class="nav navbar-nav">
 
-<ul class="dropdown-menu" role="menu">
+<li class="active"><a href="#">Home</a></li>
 
-<li class="dropdown-header">Transportation</li>
+<li><a href="#">News</a></li>
 
-<li><a href="#">Car</a></li>
+<li><a href="#">Lifestyle</a></li>
 
-<li><a href="#">Bus</a></li>
-
-<li><a href="#">Airplane</a></li>
-
-<li class="divider"></li>
-
-<li class="dropdown-header">Food</li>
-
-<li><a href="#">Hamburger</a></li>
-
-<li><a href="#">French Fries</a></li>
+<li><a href="#">Entertainment</a></li>
 
 </ul>
 
 </div>
+
+</nav>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 
