--- a/Web Site/index.html
+++ b/Web Site/index.html
@@ -28,6 +28,12 @@
 
 <div class="container-fluid">
 
+<div class="navbar-header">
+
+<a class="navbar-brand" href="#">EJ Media</a>
+
+</div>
+
 <ul class="nav navbar-nav">
 
 <li class="active"><a href="#">Home</a></li>
@@ -51,7 +57,3 @@
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 
 <script src="bootstrap/js/bootstrap.min.js"></script>
-
-</body>
-
-</html>
