--- a/Web Site/index.html
+++ b/Web Site/index.html
@@ -46,6 +46,18 @@
 
 </ul>
 
+<form class="navbar-form navbar-right">
+
+<div class="form-group">
+
+<input type="text" class="form-control" placeholder="Search">
+
+</div>
+
+<button type="submit" class="btn btn-danger">Submit</button>
+
+</form>
+
 </div>
 
 </nav>
@@ -57,3 +69,7 @@
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 
 <script src="bootstrap/js/bootstrap.min.js"></script>
+
+</body>
+
+</html>
