--- a/Web Site/index.html
+++ b/Web Site/index.html
@@ -1,75 +1,28 @@
 <!DOCTYPE html>
-
-<html lang="en">
-
+<html>
 <head>
-
-<meta charset="utf-8">
-
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-<meta name="viewport" content="width=device-width, initial-scale=1">
-
-<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-
-<title>Bootstrap 101 Template</title>
-
-<!-- Bootstrap -->
-
-<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-<link href="stylesheet.css" rel="stylesheet">
-
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-
 <body>
-
-<nav class="navbar navbar-inverse">
-
-<div class="container-fluid">
-
-<div class="navbar-header">
-
-<a class="navbar-brand" href="#">EJ Media</a>
-
-</div>
-
-<ul class="nav navbar-nav">
-
-<li class="active"><a href="#">Home</a></li>
-
-<li><a href="#">News</a></li>
-
-<li><a href="#">Lifestyle</a></li>
-
-<li><a href="#">Entertainment</a></li>
-
-</ul>
-
-<form class="navbar-form navbar-right">
-
-<div class="form-group">
-
-<input type="text" class="form-control" placeholder="Search">
-
-</div>
-
-<button type="submit" class="btn btn-danger">Submit</button>
-
-</form>
-
-</div>
-
-</nav>
-
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-
-<script src="jquery.min.js"></script>
-
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-
-<script src="bootstrap/js/bootstrap.min.js"></script>
-
+    <nav>
+        <ul class="menu">
+            <li><a href="#">Копче 1</a></li>
+            <li><a href="#">Копче 2</a></li>
+            <li class="dropdown">
+                <a href="#">Паѓачко мену</a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Прв хедер</a></li>
+                    <li><a href="#">Втор хедер</a></li>
+                    <li class="divider"></li>
+                    <li><a href="#">Ставка 1</a></li>
+                    <li><a href="#">Ставка 2</a></li>
+                </ul>
+            </li>
+        </ul>
+    </nav>
+    <div class="logo">Лого</div>
+    <button class="search-button">
+        <img src="search-icon.png" alt="Пребарување">
+    </button>
 </body>
-
 </html>
