--- a/Web Site/index.html
+++ b/Web Site/index.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- The above 3 meta tags *must* come first in the head; any other head content
-must come *after* these tags -->
+<!-- The above 3 meta tags *must* come first in the head; any other head content must
+come *after* these tags -->
 <title>Bootstrap 101 Template</title>
 <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <link href="stylesheet.css" rel="stylesheet">
@@ -17,8 +17,16 @@ must come *after* these tags -->
 
 <div class="navbar-header">
 
+<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+
+<span class="icon-bar"></span>
+<span class="icon-bar"></span>
+<span class="icon-bar"></span>
+</button>
+
 <a class="navbar-brand" href="#">EJ Media</a>
 </div>
+<div class="collapse navbar-collapse" id="myNavbar">
 
 <ul class="nav navbar-nav">
 <li class="active"><a href="#">Home</a></li>
@@ -35,18 +43,14 @@ must come *after* these tags -->
 </ul>
 <form class="navbar-form navbar-right">
 <div class="form-group">
-
-<input type="text" class="form-control"
-
-placeholder="Search">
-
+<input type="text" class="form-control" placeholder="Search">
 </div>
 <button type="submit" class="btn btn-danger">Submit</button>
 
 </form>
 </div>
+</div>
 </nav>
-
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include
