--- a/Web Site/index.html
+++ b/Web Site/index.html
@@ -4,30 +4,27 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- The above 3 meta tags *must* come first in the head; any other head content must
-come *after* these tags -->
+<!-- The above 3 meta tags *must* come first in the head; any other head content must come
+*after* these tags -->
 <title>Bootstrap 101 Template</title>
 <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <link href="stylesheet.css" rel="stylesheet">
 
 </head>
 <body>
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-default">
 <div class="container-fluid">
 
 <div class="navbar-header">
 
-<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navCollapse">
+<span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
 
-<span class="icon-bar"></span>
-<span class="icon-bar"></span>
-<span class="icon-bar"></span>
 </button>
-
 <a class="navbar-brand" href="#">EJ Media</a>
 </div>
-<div class="collapse navbar-collapse" id="myNavbar">
 
+<div class="collapse navbar-collapse" id="navCollapse">
 <ul class="nav navbar-nav">
 <li class="active"><a href="#">Home</a></li>
 <li><a href="#">News</a></li>
@@ -39,10 +36,10 @@ come *after* these tags -->
 
 <li><a href="#"><span class="glyphicon glyphicon-envelope"></span> Contact Us</a></li>
 <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-
 </ul>
 <form class="navbar-form navbar-right">
 <div class="form-group">
+
 <input type="text" class="form-control" placeholder="Search">
 </div>
 <button type="submit" class="btn btn-danger">Submit</button>
@@ -51,10 +48,12 @@ come *after* these tags -->
 </div>
 </div>
 </nav>
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+
+<!-- jQuery (necessary for Bootstrap's
+
+JavaScript plugins) -->
 <script src="jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include
 individual files as needed -->
 <script src="bootstrap/js/bootstrap.min.js"></script>
 </body>
-</html>
