--- a/Web Site/index.html
+++ b/Web Site/index.html
@@ -7,53 +7,32 @@
 <!-- The above 3 meta tags *must* come first in the head; any other head content must come
 *after* these tags -->
 <title>Bootstrap 101 Template</title>
+<!-- Bootstrap -->
 <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <link href="stylesheet.css" rel="stylesheet">
 
 </head>
 <body>
-<nav class="navbar navbar-default">
 <div class="container-fluid">
+<div class="row">
+<div class="col-md-3 col-xs-5">
 
-<div class="navbar-header">
+<div class="thumbnail">
 
-<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navCollapse">
-<span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
+<img class="img-responsive" src="arch.jpg" alt="St. Louis Arch">
 
-</button>
-<a class="navbar-brand" href="#">EJ Media</a>
-</div>
-
-<div class="collapse navbar-collapse" id="navCollapse">
-<ul class="nav navbar-nav">
-<li class="active"><a href="#">Home</a></li>
-<li><a href="#">News</a></li>
-<li><a href="#">Lifestyle</a></li>
-<li><a href="#">Entertainment</a></li>
-
-</ul>
-<ul class="nav navbar-nav navbar-right">
-
-<li><a href="#"><span class="glyphicon glyphicon-envelope"></span> Contact Us</a></li>
-<li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-</ul>
-<form class="navbar-form navbar-right">
-<div class="form-group">
-
-<input type="text" class="form-control" placeholder="Search">
-</div>
-<button type="submit" class="btn btn-danger">Submit</button>
-
-</form>
+<div class="caption">
+This is the St. Louis Arch
 </div>
 </div>
-</nav>
 
-<!-- jQuery (necessary for Bootstrap's
+</div>
+</div>
+</div>
 
-JavaScript plugins) -->
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="jquery.min.js"></script>
-<!-- Include all compiled plugins (below), or include
-individual files as needed -->
+<!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="bootstrap/js/bootstrap.min.js"></script>
 </body>
+</html>
