--- a/Web Site/index.html
+++ b/Web Site/index.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- The above 3 meta tags *must* come first in the head; any other head content must come
-*after* these tags -->
+<!-- The above 3 meta tags *must* come first in the head; any other head
+content must come *after* these tags -->
 <title>Bootstrap 101 Template</title>
 <!-- Bootstrap -->
 <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -15,24 +15,72 @@
 <body>
 <div class="container-fluid">
 <div class="row">
-<div class="col-md-3 col-xs-5">
-
+<div class="col-md-2 col-xs-3">
 <div class="thumbnail">
+<a href="аrch.png">
 
-<img class="img-responsive" src="arch.jpg" alt="St. Louis Arch">
+<!-- <img
+
+src="https://upload.wikimedia.org/wikipedia/commons/3/30/Gateway_Arch_%28distant_
+view%29.jpg" class="img-responsive" alt="St. Louis Arch"></img> -->
+<img src="аrch.png" class="img-responsive" alt="St. Louis Arch"></img
+<div class="caption">
+This is the St. Louis Arch
+</div>
+</div>
+</div>
+
+<div class="col-md-2 col-xs-3">
+<div class="thumbnail">
+<a href="аrch.png">
+
+<img src="аrch.png" class="img-responsive" alt="St. Louis Arch"></img>
+<div class="caption">
+This is the St. Louis Arch
+</div>
+</div>
+</div>
+
+<div class="col-md-2 col-xs-3">
+<div class="thumbnail">
+<a href="аrch.png">
+
+<img src="аrch.png" class="img-responsive" alt="St. Louis Arch"></img>
 
 <div class="caption">
 This is the St. Louis Arch
 </div>
 </div>
+</div>
+<div class="col-md-2 col-xs-3">
+<div class="thumbnail">
+<a href="аrch.png">
 
+<img src="аrch.png" class="img-responsive" alt="St. Louis Arch"></img>
+
+<div class="caption">
+This is the St. Louis Arch
+</div>
+</div>
+</div>
+<div class="col-md-2 col-xs-3">
+<div class="thumbnail">
+<a href="аrch.png">
+
+<img src="аrch.png" class="img-responsive" alt="St. Louis Arch"></img>
+
+<div class="caption">
+This is the St. Louis Arch
+</div>
+</div>
 </div>
 </div>
 </div>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="jquery.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
+<!-- Include all compiled plugins (below), or include individual
+files as needed -->
 <script src="bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
