--- a/Web Site/index.html
+++ b/Web Site/index.html
@@ -32,9 +32,9 @@ This is the St. Louis Arch
 
 <div class="col-md-2 col-xs-3">
 <div class="thumbnail">
-<a href="аrch.png">
+<a href="Waldorf.jpg">
 
-<img src="аrch.png" class="img-responsive" alt="St. Louis Arch"></img>
+<img src="Waldorf.jpg" class="img-responsive" alt="St. Louis Arch"></img>
 <div class="caption">
 This is the St. Louis Arch
 </div>
